# CppTasks

./: CMakeLists.txt
src/: CMakeLists.txt  TODO.txt
src/App/: CMakeLists.txt  CmdApp.cpp  CmdApp.hpp  IApp.hpp  main.cpp
src/DataBase/: CMakeLists.txt  CsvDatabase.cpp  CsvDatabase.hpp  IDatabase.hpp
src/Logic/: CMakeLists.txt
src/Logic/Connectors/: CMakeLists.txt  CsvDatabaseConnector.cpp  CsvDatabaseConnector.hpp  IDatabaseConnector.hpp
src/Logic/ModelsErrorCorrection/: CMakeLists.txt  DateCorrection.cpp  DateCorrection.hpp  ICorrection.hpp
src/Logic/Repositories/: CMakeLists.txt  ITasksRepository.hpp  TasksRepository.cpp  TasksRepository.hpp
src/Models/: CMakeLists.txt
src/Models/Models/: CMakeLists.txt  Date.cpp  Date.hpp  Task.cpp  Task.hpp
src/Models/ModelsFactories/: CMakeLists.txt  CurrentTimeFactory.cpp  CurrentTimeFactory.hpp  DateFactory.cpp  DateFactory.hpp  DateFactoryFromStringEuropean.cpp  DateFactoryFromStringEuropean.hpp  IDateFactory.hpp  IDateFactoryFromString.hpp  IDateFactoryNoArgs.hpp  ITaskFactory.hpp  TaskFactory.cpp  TaskFactory.hpp
src/Models/ToStringConverters/: CMakeLists.txt  (+3 more)
src/UI/: CMakeLists.txt
src/UI/Screens/: AddTaskScreen.cpp  AddTaskScreen.hpp  BaseScreen.hpp  CMakeLists.txt  DeleteTaskScreen.cpp  DeleteTaskScreen.hpp  DisplayScreen.cpp  DisplayScreen.hpp  EditModeScreen.cpp  EditModeScreen.hpp  EditTaskScreen.cpp  EditTaskScreen.hpp  IScreen.hpp  IScreenManager.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  ScreenManager.cpp  ScreenManager.hpp
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
(+12 files in other folders)
